Atualização do LINK para Projeto Lessons Learned

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <li><a href="https://www.betrybe.com/" target="_blank" >TRYBE</a></li>
         <li><a href="https://github.com/Breno3B" target="_blank" >GitHub</a></li>
         <li><a href="https://www.linkedin.com/in/brenorm/" target="_blank" >Linkedin</a></li>
-        <li><a href="/projetos/lessons-learned/index.html" target="_blank" >Projeto Lessons Learned</a></li>
+        <li><a href="https://breno3b.github.io/projetos/lessons-learned/index.html" target="_blank" >Projeto Lessons Learned</a></li>
 
     </ul>
 </body>
